Melhorada a visualizacao dos detalhes das acoes na tela de estatisticas Na tela de deteccao de smells: - Adicionada a transicao collapse ao abrir os grafos - Corrigido bug de grafos aparecendo em branco - Corrigido bug de grafos aparecendo com zoom - Corrigido bug do tamanho das arestas dos grafos que nao mudava - Adicionada a visualizacao da quantidade de ocorrencias da acao ao clicar em um no do grafo - Adicionada a visualizacao de informacoes sobre a aresta ao ser clicada no grafo - Aumentado o tamanho da caixa de resultados da deteccao e do grafo para melhorar a visualizacao
git-svn-id: https://xp-dev.com/svn/usabilidade@399 ace5a2d9-4f0c-4642-8350-73b2d22c680b

--- a/Usabilidade/src/main/webapp/less/useskill/style2.less
+++ b/Usabilidade/src/main/webapp/less/useskill/style2.less
@@ -1294,7 +1294,7 @@ select, textarea, input {
 	}
 }
 .useskill-smell-graph {
-	width: 100%;
-	height: 200px;
+	width: 99%;
+	height: 280px;
 	border: 1px solid #bbb;
 }
